[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "comfyui-orbitquant"
version = "0.1.0"
description = "ComfyUI custom nodes for OrbitQuant artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "WaveCut" }]
dependencies = [
  "orbitquant>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/comfyui_orbitquant"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
